--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 .top-bar {
 	background-color: #313030;
-	margin: 29px 164px 1px 164px;
+	margin: 29px 10% 1px 10%;
 	height: 89px;
 	display: flex;
 	justify-content: center;
@@ -84,12 +84,26 @@ main {
 	flex: 1 0 auto;
 }
 
+.top-background{
+	display: flex;
+    background-color: #F5F2F2;
+	height: 500px;
+	align-items: center;
+}
+
 .first-part{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	background-color: #F5F2F2;
-	height: 500px;	
+	height: 500px;
+	//margin-top: 80px;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	width: 80%;
+	padding-left: 10%;
+	padding-right: 10%;
+	height: 60%;
 }
 
 .Our{
@@ -97,18 +111,15 @@ main {
 	font-family: "OpenSans-ExtraBold", sans-serif;
 	text-transform: uppercase;
 	font-size: 26px;
-	margin-left: 164px;
 	justify-content: flex-start;
 	letter-spacing: 0.2em;
 	width: 35%;
 }
 .about{
 	display: flex;
-	margin-left: 164px;
 	font-family: "OpenSans-Italic", sans-serif;
 	color: gray;
 	justify-content: flex-start;
-	width: 450px;
 }
 
 p {
@@ -126,7 +137,6 @@ h1 {
 	color: #fff;   
     user-select: none; 
     background: #DE4142; 
-    margin-left: 164px;
     margin-top: 30px;
     width: 230px;
     height: 55px; 
@@ -141,29 +151,28 @@ h1 {
     font-family: "Open Sans";
     font-size: 22px;
     text-align: center;
-    display: inline-block;
-   //margin-left: 40px;
-   //margin-top:15px;
 }
 
 .FirstText{
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
-    width: 100%;
+    width: 60%;
+    min-width: 530px;
 }
 
 .Player{
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 164px;    
-    //height: 100%;
-    width: 80%;
+    //display: flex;
+    //justify-content: flex-end;
+    width: 40%;
+    height: 100%;
 }
 
 .youtube{
-	width: 450px;
-	height: 320px;
+	width: 100%;
+	height: 100%;
+	//min-height: 300px;
+	//object-fit: contain;
 }
 
 footer{
